<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_opcion_1"
        android:checkable="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/opc1" />

    <item
        android:id="@+id/menu_opcion_2"
        android:checkable="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/opc2" />

    <item
        android:id="@+id/menu_opcion_3"
        android:checkable="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/opc3" />

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/otras_opciones">
        <menu>
            <item
                android:id="@+id/menu_subopcion_1"
                android:checkable="true"
                android:icon="@drawable/ic_menu"
                android:title="@string/opc4" />
        </menu>

    </item>
</menu>